@@ -30,6 +30,8 @@ OPTIMIZATIONS
 BUG FIXES
   HCAT-640 CHANGES.txt still lists 0.5 as unreleased (gates)
 
+  HCAT-625 HCatalog 0.5.0 installation document is outdated
+
 Release 0.5.0 - Released 14 February 2013
 
   INCOMPATIBLE CHANGES
